@@ -144,18 +144,24 @@ selector3(struct dirent *d)
 short int 
 matchpath2(char *instr, char *path)
 {
-	int		pos = 0;
+	int		pos = 0, c = 0;
 
 	do {
 		switch (*instr) {
 		case 0:
 		case ' ':
-			if (!strncmp(instr - pos, path, pos)) {
+			if ((int)strlen(path) == pos - 1 && *(path + pos - 2) != '/' && *(instr - 1) == '/')
+				c = 1;
+			if (!strncmp(instr - pos, path, pos - c)) {
 				if (*(instr - 1) == '/')
 					return 1;
-				if (*(path + pos) == '/')
-			        	return 1;
-			}
+				if ((int)strlen(path) >= pos) {
+					if (*(path + pos - 1) == '/')
+						return 1;
+				} else
+					return 1;
+                        }
+			c = 0;
 			pos = 0;
 			break;
 		default:
